--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
+crispy-bootstrap4==2023.1
 Django==5.0.1
 django-allauth==0.60.1
+django-countries==7.5.1
 django-crispy-forms==2.1
 oauthlib==3.2.2
 pillow==10.2.0
