--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.7.2
 crispy-bootstrap4==2023.1
 dj-database-url==0.5.0
-Django==4.1.9
+django>=4.2,<4.3
 django-allauth==0.60.1
 django-contrib-comments==2.2.0
 django-countries==7.5.1
