--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 asgiref==3.7.2
+boto3==1.34.34
+botocore==1.34.34
 crispy-bootstrap4==2023.1
 dj-database-url==0.5.0
-django>=4.2,<4.3
+Django==4.1.9
 django-allauth==0.60.1
 django-contrib-comments==2.2.0
 django-countries==7.5.1
 django-crispy-forms==2.1
+django-storages==1.14.2
 gunicorn==21.2.0
+jmespath==1.0.1
 oauthlib==3.2.2
 pillow==10.2.0
 psycopg2==2.9.9
@@ -14,5 +18,7 @@ PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests-oauthlib==1.3.1
+s3transfer==0.10.0
 sqlparse==0.4.4
 stripe==8.1.0
+urllib3==2.0.7
