--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ boto3==1.34.34
 botocore==1.34.34
 crispy-bootstrap4==2023.1
 dj-database-url==0.5.0
-Django>=4.2,<4.3
+Django==4.2.11
 django-allauth==0.60.1
 django-contrib-comments==2.2.0
 django-countries==7.5.1
